fix overflow

--- a/src/style.css
+++ b/src/style.css
@@ -60,3 +60,11 @@
 [class*="prc-Dialog-Body-"] {
   overflow: visible !important;
 }
+
+[class*="AnchoredReviewBody-"] {
+  overflow: visible !important;
+}
+
+[class*="prc-Overlay-Overlay"] {
+  overflow: visible !important;
+}
